--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<div id="confirm_root"></div>
+		<div id="modal-root"></div>
+		<div id="confirm-root"></div>
 
 		<!--
       This HTML file is a template.
