--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
 		<div id="root"></div>
 		<div id="modal-root"></div>
 		<div id="confirm-root"></div>
+		<div id="drag-layout-root"></div>
 
 		<!--
       This HTML file is a template.
